# SOC-Alert-Enrichment-Pipeline

./: .env.example  .flake8  .gitignore  README.md  RESUME_TEMPLATE.md  pipeline.py  pyproject.toml  requirements.txt
config/: __init__.py  mitre_mappings.json  settings.py
dashboard/: soc_dashboard.py
data/: mock_threat_intel.json  sample_alerts.json  sample_logs.csv
src/: __init__.py  alert_parser.py  detection_rules.py  incident_response.py  ioc_extractor.py  mitre_mapper.py  report_generator.py  severity_scorer.py  slack_notifier.py  threat_intel.py
tests/: test_alert_parser.py  test_detection_rules.py  test_incident_response.py  test_severity_scorer.py
